--- a/src/app/conversor/components/conversor.component.html
+++ b/src/app/conversor/components/conversor.component.html
@@ -11,19 +11,21 @@
 	<div class="panel-body text-center">
 	  <form #conversaoForm="ngForm" class="form-inline">
 			<input 
-					type="text" 
-					name="valor"
-					placeholder="0" 
-					class="form-control text-right"
-					numero
-					required
-					[(ngModel)]="conversao.valor">
+				type="text" 
+				name="valor"
+				placeholder="0" 
+				class="form-control text-right"
+				numero
+				required
+				[(ngModel)]="conversao.valor">
+
+				valor: {{ conversao.valor }}
 
 			<select 
-					name="moedaDe"
-					class="form-control"
-					[(ngModel)]="conversao.moedaDe"
-					required>
+				name="moedaDe"
+				class="form-control"
+				[(ngModel)]="conversao.moedaDe"
+				required>
 
 				<option 
 					*ngFor="let moeda of moedas" 
@@ -33,27 +35,35 @@
 			</select>
 
 			<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+
 			<select
-					required
-					name="moedaPara"
-					class="form-control"
-					[(ngModel)]="conversao.moedaPara">
+				required
+				name="moedaPara"
+				class="form-control"
+				[(ngModel)]="conversao.moedaPara">
 
 				<option 
-						*ngFor="let moeda of moedas" 
-						[value]="moeda.sigla">
-						{{ moeda.sigla }} - {{ moeda.descricao }}
+					*ngFor="let moeda of moedas" 
+					[value]="moeda.sigla">
+					{{ moeda.sigla }} - {{ moeda.descricao }}
 				</option>
 			</select>
 
 			<input 
-					type="submit" 
-					value="Converter"
-					class="btn btn-success"
-					data-toggle="modal" 
-					data-target="#modalCotacao"
-					(click)="converter()"
-					[disabled]="!conversaoForm.form.valid">
+				type="submit" 
+				value="Converter"
+				class="btn btn-success"
+				data-toggle="modal" 
+				data-target="#modalCotacao"
+				(click)="converter()"
+				[disabled]="!conversaoForm.form.valid">
+				{{ resposta | json }}
 	  </form>
 	 </div>
+
+	 <modal-cotacao
+		 [id]="'modalCotacao'"
+		 [resposta]="resposta"
+		 [conversao]="conversao"
+		 (onConfirm)="init()"></modal-cotacao>
 </div>
